Added a readme for squad optimizer

--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -411,25 +411,568 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>costs</th>\n",
+       "      <th>total_cost</th>\n",
+       "      <th>total_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>[10, 28, 30, 32]</td>\n",
+       "      <td>98.6</td>\n",
+       "      <td>1071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>[10, 26, 32, 32]</td>\n",
+       "      <td>97.8</td>\n",
+       "      <td>1065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>[9, 29, 30, 32]</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>1062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>[12, 26, 30, 32]</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>1060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>[10, 26, 31, 33]</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>1060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>[11, 26, 31, 32]</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>1060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>[11, 27, 30, 32]</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>1060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>[10, 26, 30, 34]</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>1060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>[10, 27, 31, 32]</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>1060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>[10, 27, 30, 33]</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>1060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>[11, 26, 30, 33]</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>1060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>[10, 25, 32, 33]</td>\n",
+       "      <td>97.5</td>\n",
+       "      <td>1059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>[11, 25, 32, 32]</td>\n",
+       "      <td>97.5</td>\n",
+       "      <td>1059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>[11, 29, 30, 30]</td>\n",
+       "      <td>95.3</td>\n",
+       "      <td>1058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>[10, 29, 30, 31]</td>\n",
+       "      <td>95.3</td>\n",
+       "      <td>1058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>[10, 30, 30, 30]</td>\n",
+       "      <td>95.3</td>\n",
+       "      <td>1058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>[9, 28, 31, 32]</td>\n",
+       "      <td>97.4</td>\n",
+       "      <td>1058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>[9, 28, 30, 33]</td>\n",
+       "      <td>97.4</td>\n",
+       "      <td>1058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>[10, 28, 31, 31]</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>1054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>[10, 25, 31, 34]</td>\n",
+       "      <td>95.8</td>\n",
+       "      <td>1054</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               costs  total_cost  total_points\n",
+       "41  [10, 28, 30, 32]        98.6          1071\n",
+       "38  [10, 26, 32, 32]        97.8          1065\n",
+       "30   [9, 29, 30, 32]        97.7          1062\n",
+       "56  [12, 26, 30, 32]        96.1          1060\n",
+       "37  [10, 26, 31, 33]        96.1          1060\n",
+       "49  [11, 26, 31, 32]        96.1          1060\n",
+       "50  [11, 27, 30, 32]        96.1          1060\n",
+       "36  [10, 26, 30, 34]        96.1          1060\n",
+       "40  [10, 27, 31, 32]        96.1          1060\n",
+       "39  [10, 27, 30, 33]        96.1          1060\n",
+       "48  [11, 26, 30, 33]        96.1          1060\n",
+       "35  [10, 25, 32, 33]        97.5          1059\n",
+       "47  [11, 25, 32, 32]        97.5          1059\n",
+       "53  [11, 29, 30, 30]        95.3          1058\n",
+       "43  [10, 29, 30, 31]        95.3          1058\n",
+       "44  [10, 30, 30, 30]        95.3          1058\n",
+       "29   [9, 28, 31, 32]        97.4          1058\n",
+       "28   [9, 28, 30, 33]        97.4          1058\n",
+       "42  [10, 28, 31, 31]        95.0          1054\n",
+       "34  [10, 25, 31, 34]        95.8          1054"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "combs = optimize('points_per_million')\n",
-    "combs['points_per_million'] = pd.to_numeric(combs['points_per_million'])\n",
-    "combs.sort_values(by=['points_per_million'], ascending=False).head(20)"
+    "opt_metric = 'total_points'\n",
+    "\n",
+    "combs = optimize(opt_metric)\n",
+    "combs[opt_metric] = pd.to_numeric(combs[opt_metric])\n",
+    "combs.sort_values(by=[opt_metric], ascending=False).head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>second_name</th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>position</th>\n",
+       "      <th>selected_by_percent</th>\n",
+       "      <th>actual_cost</th>\n",
+       "      <th>total_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Nick</td>\n",
+       "      <td>Pope</td>\n",
+       "      <td>Newcastle</td>\n",
+       "      <td>Goalkeeper</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Dean</td>\n",
+       "      <td>Henderson</td>\n",
+       "      <td>Nott'm Forest</td>\n",
+       "      <td>Goalkeeper</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first_name second_name      team_name    position  selected_by_percent  \\\n",
+       "38       Nick        Pope      Newcastle  Goalkeeper                 21.0   \n",
+       "40       Dean   Henderson  Nott'm Forest  Goalkeeper                 12.6   \n",
+       "\n",
+       "    actual_cost  total_points  \n",
+       "38          5.3            62  \n",
+       "40          4.7            61  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>second_name</th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>position</th>\n",
+       "      <th>selected_by_percent</th>\n",
+       "      <th>actual_cost</th>\n",
+       "      <th>total_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Benjamin</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>William</td>\n",
+       "      <td>Saliba</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>32.7</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>Timothy</td>\n",
+       "      <td>Castagne</td>\n",
+       "      <td>Leicester</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>João</td>\n",
+       "      <td>Cancelo</td>\n",
+       "      <td>Man City</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>56.7</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>Kieran</td>\n",
+       "      <td>Trippier</td>\n",
+       "      <td>Newcastle</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>63.3</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    first_name second_name  team_name  position  selected_by_percent  \\\n",
+       "3     Benjamin       White    Arsenal  Defender                  8.4   \n",
+       "5      William      Saliba    Arsenal  Defender                 32.7   \n",
+       "74     Timothy    Castagne  Leicester  Defender                  6.8   \n",
+       "99        João     Cancelo   Man City  Defender                 56.7   \n",
+       "115     Kieran    Trippier  Newcastle  Defender                 63.3   \n",
+       "\n",
+       "     actual_cost  total_points  \n",
+       "3            4.6            54  \n",
+       "5            5.2            61  \n",
+       "74           4.7            59  \n",
+       "99           7.4            69  \n",
+       "115          5.9            77  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>second_name</th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>position</th>\n",
+       "      <th>selected_by_percent</th>\n",
+       "      <th>actual_cost</th>\n",
+       "      <th>total_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Gabriel</td>\n",
+       "      <td>Martinelli Silva</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>49.5</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Pascal</td>\n",
+       "      <td>Groß</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Leandro</td>\n",
+       "      <td>Trossard</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>Andreas</td>\n",
+       "      <td>Hoelgebaum Pereira</td>\n",
+       "      <td>Fulham</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>Miguel</td>\n",
+       "      <td>Almirón Rejala</td>\n",
+       "      <td>Newcastle</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>28.7</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    first_name         second_name  team_name    position  \\\n",
+       "6      Gabriel    Martinelli Silva    Arsenal  Midfielder   \n",
+       "45      Pascal                Groß   Brighton  Midfielder   \n",
+       "47     Leandro            Trossard   Brighton  Midfielder   \n",
+       "91     Andreas  Hoelgebaum Pereira     Fulham  Midfielder   \n",
+       "150     Miguel      Almirón Rejala  Newcastle  Midfielder   \n",
+       "\n",
+       "     selected_by_percent  actual_cost  total_points  \n",
+       "6                   49.5          6.8            69  \n",
+       "45                  13.8          5.6            68  \n",
+       "47                  26.2          7.0            78  \n",
+       "91                  24.4          4.6            59  \n",
+       "150                 28.7          5.7            79  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>second_name</th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>position</th>\n",
+       "      <th>selected_by_percent</th>\n",
+       "      <th>actual_cost</th>\n",
+       "      <th>total_points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Ivan</td>\n",
+       "      <td>Toney</td>\n",
+       "      <td>Brentford</td>\n",
+       "      <td>Forward</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Erling</td>\n",
+       "      <td>Haaland</td>\n",
+       "      <td>Man City</td>\n",
+       "      <td>Forward</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Harry</td>\n",
+       "      <td>Kane</td>\n",
+       "      <td>Spurs</td>\n",
+       "      <td>Forward</td>\n",
+       "      <td>25.4</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first_name second_name  team_name position  selected_by_percent  \\\n",
+       "7        Ivan       Toney  Brentford  Forward                 15.3   \n",
+       "31     Erling     Haaland   Man City  Forward                 80.0   \n",
+       "43      Harry        Kane      Spurs  Forward                 25.4   \n",
+       "\n",
+       "    actual_cost  total_points  \n",
+       "7           7.4            70  \n",
+       "31         12.1           122  \n",
+       "43         11.6            83  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "optimum_keeping(eligible_players, 10, 'points_per_million')\n",
-    "optimum_defence(eligible_players, 25, 'points_per_million')\n",
-    "optimum_midfield(eligible_players, 35, 'points_per_million')\n",
-    "optimum_attack(eligible_players, 35, 'points_per_million')"
+    "optimum_keeping(eligible_players, 10, opt_metric)\n",
+    "optimum_defence(eligible_players, 28, opt_metric)\n",
+    "optimum_midfield(eligible_players, 30, opt_metric)\n",
+    "optimum_attack(eligible_players, 32, opt_metric)"
    ]
   },
   {
