--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FPL Squad Optimizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Jupyter Notebook uses a knapsack algorithm to create an Fantasy Premier League squad of 15 players optimized around a specified metric (goals, clean sheets, points etc.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +41,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fetch data from the FPL API and clean it"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +58,7 @@
        "dict_keys(['events', 'game_settings', 'phases', 'teams', 'total_players', 'elements', 'element_stats', 'element_types'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,30 +109,28 @@
     "slim_elements_df = elements_df[['first_name', 'second_name','team_name','position','news','selected_by_percent','in_dreamteam',\n",
     "                                'now_cost','form','points_per_game','minutes','goals_scored','assists','clean_sheets',\n",
     "                                'goals_conceded','clean_sheets','goals_conceded','yellow_cards','red_cards','saves','bonus',\n",
-    "                                'transfers_in','value_season','total_points','influence','creativity','threat','ict_index']]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convering columns into numeric data type\n",
+    "                                'transfers_in','value_season','total_points','influence','creativity','threat','ict_index']]\n",
     "\n",
-    "slim_elements_df['selected_by_percent'] = pd.to_numeric(slim_elements_df['selected_by_percent'])\n",
-    "slim_elements_df['form'] = pd.to_numeric(slim_elements_df['form'])\n",
-    "slim_elements_df['points_per_game'] = pd.to_numeric(slim_elements_df['points_per_game'])\n",
-    "slim_elements_df['value_season'] = pd.to_numeric(slim_elements_df['value_season'])\n",
-    "slim_elements_df['influence'] = pd.to_numeric(slim_elements_df['influence'])\n",
-    "slim_elements_df['creativity'] = pd.to_numeric(slim_elements_df['creativity'])\n",
-    "slim_elements_df['threat'] = pd.to_numeric(slim_elements_df['threat'])\n",
-    "slim_elements_df['ict_index'] = pd.to_numeric(slim_elements_df['ict_index'])"
+    "# numeric columns:\n",
+    "\n",
+    "numeric_cols = ['selected_by_percent','form','points_per_game','value_season','influence','creativity','threat','ict_index']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convering columns into numeric data type\n",
+    "\n",
+    "for col in numeric_cols:\n",
+    "    slim_elements_df[col] = pd.to_numeric(slim_elements_df[col])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,21 +144,22 @@
     "slim_elements_df['points_per_million'] = slim_elements_df['total_points']/slim_elements_df['actual_cost']\n",
     "\n",
     "# eligible players\n",
-    "eligible_players = slim_elements_df[slim_elements_df['news'] == '']"
+    "eligible_players = slim_elements_df[slim_elements_df['news'] == '']\n",
+    "\n",
+    "# create a dataframe with only differentials: owned by less than 20%\n",
+    "differentials = slim_elements_df.loc[(slim_elements_df['news'] == '') & (slim_elements_df['selected_by_percent'] <= 20)]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "differentials = slim_elements_df.loc[(slim_elements_df['news'] == '') & (slim_elements_df['selected_by_percent'] <= 20) & (slim_elements_df['games_completed'] >= 20)]\n"
+    "## Python functions for the knapsack algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,12 +223,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python functions to optimize keepers, defenders, midfielders, forwards"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The knapsack algorithm will return an optimal squad of 15 players, but will not ensure that players are distributed into 2 goalkeepers, 5 defenders, 5 midfielders and 3 forwards.\n",
+    "\n",
+    "For this, we will follow these steps:\n",
+    "1. Get every combination of 4 numbers adding up to 100 (for the total costs of goalkeepers, defence, midfield, attack)\n",
+    "2. For each of these combinations, run the knapsack algorithm individually for each part of the squad\n",
+    "3. Choose the combination that gets the highest value of the target metric to be optimized"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def optimum_keeping(eligible_players, maximum_cost, opt_metric):\n",
+    "def optimum_keepers(eligible_players, maximum_cost, opt_metric):\n",
     "    \n",
     "    max_cost = maximum_cost * 10\n",
     "    \n",
@@ -233,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,11 +386,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cost Breakdowns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following functions provide all the combination sums that add up to 100.\n",
+    "\n",
+    "To avoid longer runtimes for the optimization functions, the costs for each section has a minimum threshold:\n",
+    "1. Keepers: 8 MM\n",
+    "2. Defence: 25 MM\n",
+    "3. Midfield: 30 MM\n",
+    "4. Attack: 20 MM"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Functions to get all the sum combinations\n",
+    "\n",
     "def print_all_sum_rec(target, current_sum, start, output, result):\n",
     "    if current_sum == target:\n",
     "        output.append(copy.copy(result))\n",
@@ -367,26 +435,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function that selects only the combinations with 4 numbers\n",
+    "\n",
     "def cost_breakdown(number):\n",
     "    breakdown = print_all_sum(number)\n",
     "    combinations = []\n",
     "    for i in breakdown:\n",
     "        if len(i) == 4:\n",
-    "            if i[0] >= 8 and i[1] >= 25 and i[2] >= 30 and i[3] >= 20:\n",
+    "            if (i[0] >= 8) and (i[1] >= 25) and (i[2] >= 30) and (i[3] >= 20):\n",
     "                combinations.append(i)\n",
     "    return combinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Final optimization function\n",
+    "\n",
     "def optimize(opt_metric):\n",
     "    costs_combinations = cost_breakdown(100)\n",
     "\n",
@@ -394,7 +466,7 @@
     "    \n",
     "    for costs in costs_combinations:\n",
     "        \n",
-    "        gk = optimum_keeping(eligible_players, costs[0], opt_metric)\n",
+    "        gk = optimum_keepers(eligible_players, costs[0], opt_metric)\n",
     "        dfnc = optimum_defence(eligible_players, costs[1], opt_metric)\n",
     "        mid = optimum_midfield(eligible_players, costs[2], opt_metric)\n",
     "        att = optimum_attack(eligible_players, costs[3], opt_metric)\n",
@@ -411,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -442,124 +514,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>[10, 28, 30, 32]</td>\n",
-       "      <td>98.6</td>\n",
-       "      <td>1071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>[10, 26, 32, 32]</td>\n",
-       "      <td>97.8</td>\n",
-       "      <td>1065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>[9, 29, 30, 32]</td>\n",
-       "      <td>97.7</td>\n",
-       "      <td>1062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>[12, 26, 30, 32]</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>1060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>[10, 26, 31, 33]</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>1060</td>\n",
+       "      <td>98.4</td>\n",
+       "      <td>1120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>49</th>\n",
        "      <td>[11, 26, 31, 32]</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>1060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>[11, 27, 30, 32]</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>1060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>[10, 26, 30, 34]</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>1060</td>\n",
+       "      <td>97.9</td>\n",
+       "      <td>1118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
        "      <td>[10, 27, 31, 32]</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>1060</td>\n",
+       "      <td>97.2</td>\n",
+       "      <td>1117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>[10, 27, 30, 33]</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>1060</td>\n",
+       "      <th>37</th>\n",
+       "      <td>[10, 26, 31, 33]</td>\n",
+       "      <td>97.2</td>\n",
+       "      <td>1117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>[11, 27, 30, 32]</td>\n",
+       "      <td>97.4</td>\n",
+       "      <td>1116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>[10, 28, 30, 32]</td>\n",
+       "      <td>98.9</td>\n",
+       "      <td>1116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>[12, 26, 30, 32]</td>\n",
+       "      <td>97.4</td>\n",
+       "      <td>1116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>48</th>\n",
        "      <td>[11, 26, 30, 33]</td>\n",
-       "      <td>96.1</td>\n",
-       "      <td>1060</td>\n",
+       "      <td>97.4</td>\n",
+       "      <td>1116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>[10, 25, 32, 33]</td>\n",
-       "      <td>97.5</td>\n",
-       "      <td>1059</td>\n",
+       "      <th>39</th>\n",
+       "      <td>[10, 27, 30, 33]</td>\n",
+       "      <td>96.7</td>\n",
+       "      <td>1115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>[11, 25, 32, 32]</td>\n",
-       "      <td>97.5</td>\n",
-       "      <td>1059</td>\n",
+       "      <th>36</th>\n",
+       "      <td>[10, 26, 30, 34]</td>\n",
+       "      <td>96.7</td>\n",
+       "      <td>1115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>[9, 29, 30, 32]</td>\n",
+       "      <td>98.2</td>\n",
+       "      <td>1109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
        "      <td>[11, 29, 30, 30]</td>\n",
-       "      <td>95.3</td>\n",
-       "      <td>1058</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>[10, 29, 30, 31]</td>\n",
-       "      <td>95.3</td>\n",
-       "      <td>1058</td>\n",
+       "      <td>98.4</td>\n",
+       "      <td>1108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>[10, 30, 30, 30]</td>\n",
-       "      <td>95.3</td>\n",
-       "      <td>1058</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>1107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>[10, 29, 30, 31]</td>\n",
+       "      <td>97.7</td>\n",
+       "      <td>1107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>[9, 26, 32, 33]</td>\n",
+       "      <td>97.2</td>\n",
+       "      <td>1104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>[9, 27, 32, 32]</td>\n",
+       "      <td>97.2</td>\n",
+       "      <td>1104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>[11, 25, 32, 32]</td>\n",
+       "      <td>98.3</td>\n",
+       "      <td>1104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>[10, 25, 32, 33]</td>\n",
+       "      <td>97.6</td>\n",
+       "      <td>1103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>[9, 28, 31, 32]</td>\n",
-       "      <td>97.4</td>\n",
-       "      <td>1058</td>\n",
+       "      <td>98.2</td>\n",
+       "      <td>1102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>[9, 28, 30, 33]</td>\n",
-       "      <td>97.4</td>\n",
-       "      <td>1058</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>[10, 28, 31, 31]</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>1054</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>[10, 25, 31, 34]</td>\n",
-       "      <td>95.8</td>\n",
-       "      <td>1054</td>\n",
+       "      <th>46</th>\n",
+       "      <td>[11, 25, 31, 33]</td>\n",
+       "      <td>97.1</td>\n",
+       "      <td>1101</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -567,29 +639,29 @@
       ],
       "text/plain": [
        "               costs  total_cost  total_points\n",
-       "41  [10, 28, 30, 32]        98.6          1071\n",
-       "38  [10, 26, 32, 32]        97.8          1065\n",
-       "30   [9, 29, 30, 32]        97.7          1062\n",
-       "56  [12, 26, 30, 32]        96.1          1060\n",
-       "37  [10, 26, 31, 33]        96.1          1060\n",
-       "49  [11, 26, 31, 32]        96.1          1060\n",
-       "50  [11, 27, 30, 32]        96.1          1060\n",
-       "36  [10, 26, 30, 34]        96.1          1060\n",
-       "40  [10, 27, 31, 32]        96.1          1060\n",
-       "39  [10, 27, 30, 33]        96.1          1060\n",
-       "48  [11, 26, 30, 33]        96.1          1060\n",
-       "35  [10, 25, 32, 33]        97.5          1059\n",
-       "47  [11, 25, 32, 32]        97.5          1059\n",
-       "53  [11, 29, 30, 30]        95.3          1058\n",
-       "43  [10, 29, 30, 31]        95.3          1058\n",
-       "44  [10, 30, 30, 30]        95.3          1058\n",
-       "29   [9, 28, 31, 32]        97.4          1058\n",
-       "28   [9, 28, 30, 33]        97.4          1058\n",
-       "42  [10, 28, 31, 31]        95.0          1054\n",
-       "34  [10, 25, 31, 34]        95.8          1054"
+       "38  [10, 26, 32, 32]        98.4          1120\n",
+       "49  [11, 26, 31, 32]        97.9          1118\n",
+       "40  [10, 27, 31, 32]        97.2          1117\n",
+       "37  [10, 26, 31, 33]        97.2          1117\n",
+       "50  [11, 27, 30, 32]        97.4          1116\n",
+       "41  [10, 28, 30, 32]        98.9          1116\n",
+       "56  [12, 26, 30, 32]        97.4          1116\n",
+       "48  [11, 26, 30, 33]        97.4          1116\n",
+       "39  [10, 27, 30, 33]        96.7          1115\n",
+       "36  [10, 26, 30, 34]        96.7          1115\n",
+       "30   [9, 29, 30, 32]        98.2          1109\n",
+       "53  [11, 29, 30, 30]        98.4          1108\n",
+       "44  [10, 30, 30, 30]        97.7          1107\n",
+       "43  [10, 29, 30, 31]        97.7          1107\n",
+       "24   [9, 26, 32, 33]        97.2          1104\n",
+       "27   [9, 27, 32, 32]        97.2          1104\n",
+       "47  [11, 25, 32, 32]        98.3          1104\n",
+       "35  [10, 25, 32, 33]        97.6          1103\n",
+       "29   [9, 28, 31, 32]        98.2          1102\n",
+       "46  [11, 25, 31, 33]        97.1          1101"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +1041,7 @@
     }
    ],
    "source": [
-    "optimum_keeping(eligible_players, 10, opt_metric)\n",
+    "optimum_keepers(eligible_players, 10, opt_metric)\n",
     "optimum_defence(eligible_players, 28, opt_metric)\n",
     "optimum_midfield(eligible_players, 30, opt_metric)\n",
     "optimum_attack(eligible_players, 32, opt_metric)"
